--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://barnellioss.github.io/ToDoList",
+  "homepage": "https://barnellioss.github.io/Tracker",
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
+    "moment-precise-range-plugin": "^1.3.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
