--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "todolist",
+  "name": "tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://barnellioss.github.io/Tracker",
+  "homepage": " https://barnellioss.github.io/Tracker",
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.13.1",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "moment-precise-range-plugin": "^1.3.0",
     "node-sass": "^4.14.1",
@@ -28,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
